<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Root">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Theme.TitleText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:text="@string/questionPaymentTitle" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseMarginBig"
        android:background="@android:color/transparent"
        android:digits="0123456789,."
        android:fontFamily="@font/roboto_bold"
        android:inputType="number"
        android:textColor="@color/payment"
        android:textColorHint="@color/payment"
        android:textDirection="rtl"
        android:textSize="60sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"

        tools:text="9,23">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseMargin"
        android:background="@drawable/currency_capsule_background"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        android:text="@string/currency"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAmount" />

    <Button
        android:id="@+id/btnSubmitSurvey"
        style="@style/Theme.PrimaryButton"
        android:layout_marginTop="@dimen/baseMarginBig"
        android:text="@string/submitSurveyBtnText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCurrency" />

</androidx.constraintlayout.widget.ConstraintLayout>